[gd_scene load_steps=16 format=2]

[ext_resource path="res://Placeholder Textures for Shards of the Past/blightmother/blightmother_0.png" type="Texture" id=1]
[ext_resource path="res://Placeholder Textures for Shards of the Past/blightmother/blightmother_1.png" type="Texture" id=2]
[ext_resource path="res://Placeholder Textures for Shards of the Past/blightmother/blight_aura.png" type="Texture" id=3]
[ext_resource path="res://Blightmother.gd" type="Script" id=4]
[ext_resource path="res://Placeholder Textures for Shards of the Past/blightmother/blightmother_death_0.png" type="Texture" id=5]
[ext_resource path="res://Placeholder Textures for Shards of the Past/blightmother/blightmother_death_2.png" type="Texture" id=6]
[ext_resource path="res://Placeholder Textures for Shards of the Past/blightmother/blightmother_death_3.png" type="Texture" id=7]
[ext_resource path="res://Placeholder Textures for Shards of the Past/blightmother/blightmother_death_4.png" type="Texture" id=8]
[ext_resource path="res://Placeholder Textures for Shards of the Past/blightmother/blightmother_death_1.png" type="Texture" id=9]
[ext_resource path="res://Placeholder Textures for Shards of the Past/blightmother/blightmother_death_5.png" type="Texture" id=10]
[ext_resource path="res://Placeholder Textures for Shards of the Past/blightmother/blightmother_death_7.png" type="Texture" id=11]
[ext_resource path="res://Placeholder Textures for Shards of the Past/blightmother/blightmother_death_6.png" type="Texture" id=12]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 4.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 9 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 10 ), ExtResource( 12 ), ExtResource( 11 ) ],
"loop": true,
"name": "dying",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 35.0
height = 0.0

[sub_resource type="CircleShape2D" id=3]
radius = 96.0469

[node name="Blightmother" type="KinematicBody2D"]
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
z_index = -2
frames = SubResource( 1 )
animation = "idle"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -1, 6 )
shape = SubResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( -13, -12, -70, -42, -68, -65, 64, -65, 64, 19, 22, 32 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( -1, 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="Area2D"]
texture = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.1

[node name="Timer3" type="Timer" parent="."]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_Timer3_timeout"]
